# Nao_Kinect_RNN_Motion_Adaption

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.18  CMakeLists.txt.user.4c62959  fnnlib.hpp  qiproject.xml
.qi/: qibuild.xml  worktree.xml
Data/nn_data/: Parameters.txt.Template
Data/nn_data/ElbowYaw_2701/: anglesIn.txt  anglesOut.txt  initialPose.txt  initialWeights.txt  nnParameters.txt  objectPos.txt  weights.txt  weights.txt.2
Data/nn_data/Full_2701/: Parameters.txt  anglesIn.txt  anglesOut.txt  initialPose.txt  initialWeights.txt  nnParameters.txt  objectPos.txt  weights.txt  weights.txt.1
Data/nn_data/UPDown_1/: Parameters.txt  initialPose.txt  initialWeights.txt  weights.txt
Data/nn_data/UPDown_2/: Parameters.txt  initialWeights.txt  weights.txt  weights.txt.2401
Data/nn_data/UPDown_2401/: Parameters.txt  Parameters.txt.test  Parameters042202..txt  initialWeights.txt  nnParameters.txt  weights.txt  weights.txt.test  weights.txt0422
Data/nn_data/UPDown_3/: Parameters.txt  anglesOut.txt  initialWeights.txt  weights.txt
Data/nn_data/UPDown_4/: Parameters.txt  Parameters042201.txt  initialWeights.txt  objectPos.txt  weights.txt  weights.txt.2601
Data/nn_data/UPDown_5/: Parameters.txt  anglesIn.txt  initialWeights.txt  weights.txt  weights.txt042202
Data/nn_data/UPDown_6/: Parameters.txt  initialWeights.txt  weights.txt  weights.txt042201
Data/nn_data/circle_0308/: Parameters.txt  anglesIn.txt  anglesOut.txt  est.txt  initialPose.txt  initialWeights.txt  objectPos.txt  weights.txt
Data/nn_data/circle_0902/: Parameters.txt  est.txt  initialPose.txt  initialWeights.txt  weights.txt
Data/nn_data/circle_0902_2/: Parameters.txt  anglesIn.txt  anglesOut.txt  est.txt  initialWeights.txt  objectPos.txt  untitled.m  untitled.m~  weights.txt
Data/nn_data/demo/: PBvalues  Parameters.txt  anglesIn.txt1  anglesIn.txt2  anglesIn.txt3  (+19 more)
Data/sample_output/: anglesIn.txt.1  anglesIn.txt.2  anglesIn.txt1  anglesIn.txt2  anglesIn.txt3  anglesOut.txt1  anglesOut.txt2  anglesOut.txt3  anglesOut.txt4  initialPose.txt.1  initialPose.txt1  initialPose.txt3  objectPos.txt.2  objectPos.txt1  objectPos.txt2  objectPos.txt3  objectPos.txt5
build-naosdk_toolchain/: Makefile  Nao_AdaptiveMotion.cbp  Nao_AdaptiveMotion.layout  dependencies.cmake  test0.txt
build-naosdk_toolchain/output/: .~lock.after.txt#  Sample_angle_1.txt  Sample_angle_1in.txt  Sample_initialPose_3.txt  Weights_afterTrain.txt  Weights_beforetrain.txt  after.txt  before.txt
config/: IPAddr.txt  PathToData.txt
include/: Connectom.hpp  Kinect.hpp  Nao.hpp  ObjectTracker.hpp  ObjectTracker.hpp.autosave  SampleWriter.hpp  UserInterface.hpp  UserSkeleton.h  UserSkeleton.hpp  Utilities.hpp
include/OpenNI2/: OpenNI.h
lib/: OpenNI.ini  libGLEW.so.2.0.0  libglut.so.3.10.0
rnn/: rnn.hpp
rnn/include/: ActivationFunction.hpp  BPTT.hpp  DataSource.hpp  ESNTrainingAlgorithm.hpp  Initialization.hpp  Layer.hpp  NetworkErrorData.hpp  NeuralNetwork.hpp  RNN.hpp  RNNTrainingAlgorithm.hpp
rnn/notUsed/: CtrnnAlgorithm.hpp
rnn/src/: ActivationFunction.cpp  Adaptation.cpp  BPTT.cpp  CBPTT.cpp  DataSource.cpp  ESN.cpp  ESNLayer.cpp  ESNTrainingAlgorithm.cpp  Initialization.cpp  Layer.cpp  LayerErrorData.cpp  NetworkErrorData.cpp  NeuralNetwork.cpp  NeuralNetwork.cpp.autosave  RNN.cpp  RNNTrainingAlgorithm.cpp
rnnlib/: rnnlib.hpp
rnnlib/include/: Adaptation.hpp  CBPTT.hpp  DataSource.hpp  ESN.hpp  ESNLayer.hpp  LayerErrorData.hpp  NeuralNetwork.hpp
rnnlib/src/: ActivationFunction.cpp  Adaptation.cpp  BPTT.cpp  DataSource.cpp  ESN.cpp  ESNLayer.cpp  Initialization.cpp  Layer.cpp  LayerErrorData.cpp  NetworkErrorData.cpp  NeuralNetwork.cpp  RNN.cpp  RNNTrainingAlgorithm.cpp
sample/: Sample_initialPose_1.txt  Sample_object_1.txt
src/: Connectom.cpp  Connectom.cpp.autosave  Kinect.cpp  Nao.cpp  ObjectTracker.cpp  SampleWriter.cpp  UserSkeleton.cpp  UserSkeleton.cpp.old2  Utilities.cpp  main.cpp
(+189 files in other folders)
